--- a/404.md
+++ b/404.md
@@ -1,28 +1,14 @@
 ---
 permalink: /404.html
-title: Sivua ei löydy
+title: 404 - The page cannot be found. Sivua ei löydy.
 
-layout: default
+layout: artikkeli
+
+iso-kuva: havu-plays-broken-tyre.png
+iso-kuva-sokeille: Little Havu plays broken tyre 
 
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+If you're looking for an old article or image, it probably still exists somewhere. We have moved things around a bit. Head on to the [front page](en/index).
 
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Sivua ei löydy :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+Vanhoja artikkeleita ja kuvia ei ole poistettu. Etsimäsi löytynee [etusivun](index) kautta.
